--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
             <div class="container">
-                <h1>Random quotes to inspire you day...</h1>
+                <h1>Random quotes to inspire your day...</h1>
                 <h3 id="quote">This is the text for the quote</h3>
                 <p id="author">This is the author's name</p>
                 <button id="btn">Get quote!</button>
